--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Troy-Yang/aws-ec2-autodeploy-node/issues"
   },
-  "homepage": "https://github.com/Troy-Yang/aws-ec2-autodeploy-node#readme"
+  "homepage": "https://github.com/Troy-Yang/aws-ec2-autodeploy-node#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
+  }
 }
